# src/tasks/dto/get-tasks.dto.ts
@@ -1,0 +1,16 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+import { IsEnum, IsOptional } from 'class-validator';
+import { GetPaginatedResponseDto } from 'src/common/dto';
+import { TaskPriority, TaskStatus } from 'src/generated/prisma/enums';
+
+export class GetTasksDto extends GetPaginatedResponseDto {
+  @ApiPropertyOptional({ enum: TaskStatus })
+  @IsOptional()
+  @IsEnum(TaskStatus)
+  status?: TaskStatus;
+
+  @ApiPropertyOptional({ enum: TaskPriority })
+  @IsOptional()
+  @IsEnum(TaskPriority)
+  priority?: TaskPriority;
+}
